ROS2/log/build_2024-08-11_11-47-36/uav_patrol/stderr.log
  File "/home/x650/UAV/ROS2/install/uav_patrol/lib/python3.10/site-packages/uav_patrol/drone_controller/drone_controller.py", line 83
    self.cur_sub_pose.pose.position.y, self.cur_sub_pose.pose.position.z}")
                                                                          ^
SyntaxError: f-string expression part cannot include a backslash

